--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "Yorkii/model-repository",
+  "name": "yorki/model-repository",
   "description": "Repositories for Laravel models",
   "license": "MIT",
   "keywords": [
@@ -28,18 +28,18 @@
   },
   "autoload": {
     "psr-4": {
-      "Yorkii\\Repositories\\": "src/"
+      "Yorki\\Repositories\\": "src/"
     }
   },
   "autoload-dev": {
     "psr-4": {
-      "Yorkii\\Repositories\\Test\\": "tests"
+      "Yorki\\Repositories\\Test\\": "tests"
     }
   },
   "extra": {
     "laravel": {
       "providers": [
-        "Yorkii\\Repositories\\ServiceProvider"
+        "Yorki\\Repositories\\ServiceProvider"
       ]
     }
   }
