--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "yorki/model-repository",
+  "name": "npabisz/laravel-repositories",
   "description": "Repositories for Laravel models",
   "license": "MIT",
   "keywords": [
@@ -13,33 +13,25 @@
       "email": "yorki.ogame@gmail.com"
     }
   ],
-  "homepage": "https://github.com/Yorkii/model-repository",
+  "homepage": "https://github.com/npabisz/laravel-repositories",
   "require": {
-    "php": ">=7.0",
-    "illuminate/support": ">=5.5",
-    "illuminate/contracts": ">=5.5",
-    "illuminate/view": ">=5.5",
-    "illuminate/container": ">=5.5",
-    "illuminate/console": ">=5.5",
-    "illuminate/cache": ">=5.5"
-  },
-  "require-dev": {
-    "phpunit/phpunit": "~6.0"
+    "php": ">=8.1",
+    "illuminate/support": "^9.0",
+    "illuminate/contracts": "^9.0",
+    "illuminate/view": "^9.0",
+    "illuminate/container": "^9.0",
+    "illuminate/console": "^9.0",
+    "illuminate/cache": "^9.0"
   },
   "autoload": {
     "psr-4": {
-      "Yorki\\Repositories\\": "src/"
-    }
-  },
-  "autoload-dev": {
-    "psr-4": {
-      "Yorki\\Repositories\\Test\\": "tests"
+      "Npabisz\\Repositories\\": "src/"
     }
   },
   "extra": {
     "laravel": {
       "providers": [
-        "Yorki\\Repositories\\ServiceProvider"
+        "Npabisz\\Repositories\\ServiceProvider"
       ]
     }
   }
