--- a/composer.json
+++ b/composer.json
@@ -15,13 +15,13 @@
   ],
   "homepage": "https://github.com/npabisz/laravel-repositories",
   "require": {
-    "php": ">=8.1",
-    "illuminate/support": "^9.0",
-    "illuminate/contracts": "^9.0",
-    "illuminate/view": "^9.0",
-    "illuminate/container": "^9.0",
-    "illuminate/console": "^9.0",
-    "illuminate/cache": "^9.0"
+    "php": "^8.2",
+    "illuminate/support": "^11.0",
+    "illuminate/contracts": "^11.0",
+    "illuminate/view": "^11.0",
+    "illuminate/container": "^11.0",
+    "illuminate/console": "^11.0",
+    "illuminate/cache": "^11.0"
   },
   "autoload": {
     "psr-4": {
